--- a/style.css
+++ b/style.css
@@ -1,12 +1,94 @@
-h1 {
-	color: red;
-	text-decoration: underline;
+body {
+	margin:0;
 }
 
-.table-headings {
-background-color: gray;
+header {
+	height: 100px;
 }
 
-#table-title {
-	color: green;
+#iCodeLogo {
+	padding: 15px;
+	height: 75px;
+	float: left;
+}
+
+nav {
+	position: relative;
+	text-align: center;
+	width: 70%;
+	top: 40%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.nav-a {
+	margin-left: 4em;
+	text-decoration: none;
+	color: #696969;
+	font-size: 14px;
+	font-family: arial;
+}
+
+#body-wrapper {
+	padding: 3em;
+	min-height: 100%;
+}
+
+#main {
+	overflow: auto;
+}
+
+#kidpic {
+	display: block;
+	height: 350px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+aside {
+	float: right;
+	width: 30%;
+	height: 50em;
+	text-align: center;
+	background-color: #525d6f;
+	color: white;
+	font-family: arial;
+}
+
+section {
+	float: left;
+	width: 60%;
+}
+
+article {
+	float: left;
+	width: 60%;
+}
+
+#section-h2 {
+	text-align: center;
+}
+
+footer {
+	position: relative;
+	margin-top: 60px;
+	width: 100%;
+	height: 60px;
+	background-color: #404040;
+	clear: both;
+	text-align: right;
+}
+
+.footer-p {
+	font-family: arial;
+	font-size: 10px;
+	margin-bottom: auto;
+	margin-top: auto;
+	padding: 5px;
+	text-align: left;
+}
+
+#footer-email {
+	text-decoration: none;
+	color: black;
 }
